Se agrega diccionario en views

--- a/plantilla1.html
+++ b/plantilla1.html
@@ -3,5 +3,8 @@
 <h1 style="color:blueviolet">
 Hola mundo, esta es mi primer plantilla html!!!
 </h1>
+<p>Mi nombre es: {{mi_nombre}} {{mi_apellido}}</p>
+<p>Este es el momento actual: {{tiempo_actual}}</p>
+<p>Otro formato de fecha: {{tiempo_actual.day}}/{{tiempo_actual.month}}/{{tiempo_actual.year}}</p>
 </body>
 </html
