Se muestra una lista desde la plantilla

--- a/plantilla1.html
+++ b/plantilla1.html
@@ -6,5 +6,11 @@ Hola mundo, esta es mi primer plantilla html!!!
 <p>Mi nombre es: {{mi_nombre}} {{mi_apellido}}</p>
 <p>Este es el momento actual: {{tiempo_actual}}</p>
 <p>Otro formato de fecha: {{tiempo_actual.day}}/{{tiempo_actual.month}}/{{tiempo_actual.year}}</p>
+<p>Ver toda una lista como elemento de diccionario: {{colores}}</p>
+
+<p style="color:cornflowerblue"><strong>
+    Ver un solo elemento de la lista: {{colores.1}}
+</strong></p>
+
 </body>
 </html
