--- a/plantilla1.html
+++ b/plantilla1.html
@@ -3,6 +3,11 @@
 <h1 style="color:blueviolet">
 Hola mundo, esta es mi primer plantilla html!!!
 </h1>
+
+{% if mi_nombre == 'Eduardo' %} <!--Si el nombre en p1.nombre es Eduardo..-->
+<p>Efectivamente soy yo</p>     <!--muestra esto-->
+{% endif %}
+
 <p>Mi nombre es: {{mi_nombre}} {{mi_apellido}}</p>
 <p>Este es el momento actual: {{tiempo_actual}}</p>
 <p>Otro formato de fecha: {{tiempo_actual.day}}/{{tiempo_actual.month}}/{{tiempo_actual.year}}</p>
